--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
     "@angular/forms": "~10.0.11",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
     "@types/jquery": "^3.5.1",
+    "angular2-jwt": "^0.2.3",
     "jquery": "^3.5.1",
     "ng-media-query": "^1.0.3",
     "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
